--- a/.github/workflows/update-prices.yml
+++ b/.github/workflows/update-prices.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: "3.11"
       - name: Install dependencies
-        run: pip install paapi5-python-sdk requests
+        run: pip install python-amazon-paapi requests
       - name: Run price updater
         env:
           AMAZON_ACCESS_KEY: ${{ secrets.AMAZON_ACCESS_KEY }}
