--- a/.github/workflows/update-prices.yml
+++ b/.github/workflows/update-prices.yml
@@ -1,5 +1,4 @@
 name: Update Prices
-
 on:
   schedule:
     - cron: "0 */6 * * *"   # run every 6 hours (fixed syntax)
@@ -16,22 +15,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0    # Fetch full history to avoid sync issues
-
+          
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-
+          
       - name: Install dependencies
-        run: pip install python-amazon-paapi requests
-
+        run: pip install -r requirements.txt
+        
       - name: Run price updater
         env:
           AMAZON_ACCESS_KEY: ${{ secrets.AMAZON_ACCESS_KEY }}
           AMAZON_SECRET_KEY: ${{ secrets.AMAZON_SECRET_KEY }}
           AMAZON_ASSOCIATE_TAG: ${{ secrets.AMAZON_ASSOCIATE_TAG }}
         run: python update_prices.py
-
+        
       - name: Commit & Push changes
         run: |
           git config user.name "github-actions"
