--- a/.github/workflows/update-prices.yml
+++ b/.github/workflows/update-prices.yml
@@ -37,14 +37,14 @@ jobs:
         pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Verify Excel file exists
+    - name: Verify CSV file exists
       run: |
-        if [ ! -f "data/product_asin.xlsx" ]; then
-          echo "❌ Excel file not found at data/product_asin.xlsx"
-          echo "Please upload your Excel file to the data/ folder"
+        if [ ! -f "data/product_asin.csv" ]; then
+          echo "❌ CSV file not found at data/product_asin.csv"
+          echo "Please upload your CSV file to the data/ folder"
           exit 1
         fi
-        echo "✅ Excel file found"
+        echo "✅ CSV file found"
         
     - name: Run price scraper
       run: |
