--- a/.github/workflows/update-prices.yml
+++ b/.github/workflows/update-prices.yml
@@ -1,5 +1,4 @@
 name: Update Prices
-
 on:
   schedule:
     # Run every 12 hours (more reasonable for Amazon scraping)
@@ -7,8 +6,7 @@ on:
   workflow_dispatch: # Allow manual trigger
   push:
     paths:
-      - 'data/products.xlsx'  # Trigger when Excel file is updated
-
+      - 'data/product_asin.csv'  # Trigger when CSV file is updated
 jobs:
   update-prices:
     runs-on: ubuntu-latest
@@ -39,7 +37,7 @@ jobs:
         
     - name: Verify CSV file exists
       run: |
-        if [ ! -f "product_asin.csv" ]; then
+        if [ ! -f "data/product_asin.csv" ]; then
           echo "❌ CSV file not found at data/product_asin.csv"
           echo "Please upload your CSV file to the data/ folder"
           exit 1
