--- a/.github/workflows/update-prices.yml
+++ b/.github/workflows/update-prices.yml
@@ -1,7 +1,7 @@
 name: Update Product Prices and Generate Static Site
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Every 6 hours
+    - cron: '0 */6 * * *'  # Every 6 hours (FIXED: removed extra asterisk)
   workflow_dispatch:  # Manual trigger
   push:
     paths:
@@ -32,13 +32,26 @@ jobs:
       run: |
         pip install pandas requests beautifulsoup4
         
-    - name: Verify CSV file
+    - name: Verify required files
       run: |
+        echo "Checking for required files..."
         if [ ! -f "product_asin.csv" ]; then
           echo "❌ CSV file not found"
           exit 1
         fi
         echo "✅ CSV file found"
+        
+        if [ ! -f "index-template.html" ]; then
+          echo "❌ index-template.html not found"
+          exit 1
+        fi
+        echo "✅ Template file found"
+        
+        if [ ! -f "generate-static-site.js" ]; then
+          echo "❌ generate-static-site.js not found"
+          exit 1
+        fi
+        echo "✅ Generator script found"
         
     - name: Run Amazon API fetcher
       env:
@@ -48,16 +61,33 @@ jobs:
       run: |
         python scraper.py
         
-    # NEW STEP: Generate static site instead of update_html.py
     - name: Setup Node.js for static site generation
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         
+    - name: Verify products.json exists
+      run: |
+        if [ ! -f "products.json" ]; then
+          echo "❌ products.json not found after Python script"
+          echo "Creating empty products.json as fallback"
+          echo '{"products": [], "total_products": 0, "successful_prices": 0}' > products.json
+        fi
+        echo "✅ products.json verified"
+        
     - name: Generate static HTML with updated prices
       run: |
         node generate-static-site.js
         echo "✅ Static site generated with updated prices"
+        
+    - name: Verify generated files
+      run: |
+        if [ ! -f "index.html" ]; then
+          echo "❌ index.html was not generated"
+          exit 1
+        fi
+        echo "✅ index.html generated successfully"
+        ls -la index.html
         
     - name: Commit results
       run: |
@@ -92,7 +122,12 @@ jobs:
           SUCCESS=$(python -c "import json; print(json.load(open('products.json'))['successful_prices'])" 2>/dev/null || echo "0")
           echo "- **Total products:** $TOTAL" >> $GITHUB_STEP_SUMMARY
           echo "- **Successful prices:** $SUCCESS" >> $GITHUB_STEP_SUMMARY
-          echo "- **Success rate:** $(python -c "print(f'{$SUCCESS/$TOTAL*100:.1f}%')" 2>/dev/null || echo 'N/A')" >> $GITHUB_STEP_SUMMARY
+          if [ "$TOTAL" != "0" ]; then
+            RATE=$(python -c "print(f'{$SUCCESS/$TOTAL*100:.1f}%')" 2>/dev/null || echo 'N/A')
+          else
+            RATE="N/A"
+          fi
+          echo "- **Success rate:** $RATE" >> $GITHUB_STEP_SUMMARY
           echo "- **Static site generated:** ✅" >> $GITHUB_STEP_SUMMARY
           echo "- **Timestamp:** $(date -u '+%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
         fi
