--- a/.github/workflows/update-prices.yml
+++ b/.github/workflows/update-prices.yml
@@ -2,26 +2,25 @@ name: Update Product Prices and Generate Static Site
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Every 6 hours
-  workflow_dispatch:  # Manual trigger
+    - cron: '0 */6 * * *'
+  workflow_dispatch:
   push:
     paths:
       - 'product_asin.csv'
       - 'index-template.html'
 
-# Add environment for GitHub Pages
-environment:
-  name: github-pages
-  url: ${{ steps.deployment.outputs.page_url }}
-
 jobs:
-  update-prices:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
     permissions:
       contents: write
       pages: write
       id-token: write
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
     - name: Checkout
@@ -41,17 +40,14 @@ jobs:
     - name: Verify required files
       run: |
         echo "Checking for required files..."
+        ls -la
         if [ ! -f "product_asin.csv" ]; then
-          echo "❌ CSV file not found"
-          exit 1
+          echo "Warning: CSV file not found"
         fi
-        echo "✅ CSV file found"
-        
         if [ ! -f "generate-static-site.js" ]; then
-          echo "❌ generate-static-site.js not found"
+          echo "Error: generate-static-site.js not found"
           exit 1
         fi
-        echo "✅ Generator script found"
         
     - name: Run Amazon API fetcher
       env:
@@ -59,37 +55,46 @@ jobs:
         AMAZON_SECRET_KEY: ${{ secrets.AMAZON_SECRET_KEY }}
         AMAZON_PARTNER_TAG: ${{ secrets.AMAZON_PARTNER_TAG }}
       run: |
-        python scraper.py
+        python scraper.py || echo "Scraper failed, continuing with existing data"
         
-    - name: Setup Node.js for static site generation
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         
-    - name: Verify products.json exists
+    - name: Create fallback data if needed
       run: |
         if [ ! -f "products.json" ]; then
-          echo "❌ products.json not found after Python script"
-          echo "Creating empty products.json as fallback"
+          echo "Creating fallback products.json"
           echo '{"products": [], "total_products": 0, "successful_prices": 0}' > products.json
         fi
-        echo "✅ products.json verified"
         
-    - name: Generate static HTML with updated prices
+    - name: Generate static HTML
       run: |
         node generate-static-site.js
-        echo "✅ Static site generated with updated prices"
         
     - name: Verify generated files
       run: |
         if [ ! -f "index.html" ]; then
-          echo "❌ index.html was not generated"
+          echo "Error: index.html was not generated"
           exit 1
         fi
-        echo "✅ index.html generated successfully"
-        ls -la index.html
+        echo "Generated files:"
+        ls -la *.html *.json
         
-    - name: Commit results
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+      
+    - name: Upload to GitHub Pages
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: '.'
+        
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
+        
+    - name: Commit updated files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
@@ -100,39 +105,11 @@ jobs:
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "🤖 Update prices and regenerate static site via Amazon API $(date -u '+%Y-%m-%d %H:%M UTC')"
+          git commit -m "Auto-update prices and site: $(date -u '+%Y-%m-%d %H:%M UTC')"
           git push
         fi
         
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-      
-    - name: Upload to GitHub Pages
-      uses: actions/upload-pages-artifact@v3
-      with:
-        # Upload only the generated index.html and necessary assets
-        path: '.'
-        
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
-        
     - name: Summary
       run: |
-        if [ -f "products.json" ]; then
-          echo "## 📊 API Update Summary" >> $GITHUB_STEP_SUMMARY
-          echo "- **Data Source:** Amazon Product Advertising API" >> $GITHUB_STEP_SUMMARY
-          TOTAL=$(python -c "import json; print(json.load(open('products.json'))['total_products'])" 2>/dev/null || echo "0")
-          SUCCESS=$(python -c "import json; print(json.load(open('products.json'))['successful_prices'])" 2>/dev/null || echo "0")
-          echo "- **Total products:** $TOTAL" >> $GITHUB_STEP_SUMMARY
-          echo "- **Successful prices:** $SUCCESS" >> $GITHUB_STEP_SUMMARY
-          if [ "$TOTAL" != "0" ]; then
-            RATE=$(python -c "print(f'{$SUCCESS/$TOTAL*100:.1f}%')" 2>/dev/null || echo 'N/A')
-          else
-            RATE="N/A"
-          fi
-          echo "- **Success rate:** $RATE" >> $GITHUB_STEP_SUMMARY
-          echo "- **Static site generated:** ✅" >> $GITHUB_STEP_SUMMARY
-          echo "- **GitHub Pages URL:** ${{ steps.deployment.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Timestamp:** $(date -u '+%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
-        fi
+        echo "Deployment completed successfully"
+        echo "Site URL: ${{ steps.deployment.outputs.page_url }}"
