--- a/.github/workflows/price-updater.yml
+++ b/.github/workflows/price-updater.yml
@@ -2,7 +2,7 @@ name: Update Product Prices and Generate Static Site
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Fixed cron syntax - every 6 hours
+    - cron: '0 */6 * * *'
   workflow_dispatch:
   push:
     paths:
